After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 793485 - [PATCH] Gdk-Warnings on game sounds under Wayland
[PATCH] Gdk-Warnings on game sounds under Wayland
Status: RESOLVED FIXED
Product: four-in-a-row
Classification: Applications
Component: general
3.27.x
Other Linux
: Normal normal
: ---
Assigned To: four-in-a-row-maint
four-in-a-row-maint
Depends on:
Blocks:
 
 
Reported: 2018-02-15 13:09 UTC by Yanko Kaneti
Modified: 2018-02-15 23:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix (997 bytes, patch)
2018-02-15 13:10 UTC, Yanko Kaneti
accepted-commit_now Details | Review

Description Yanko Kaneti 2018-02-15 13:09:46 UTC
four-in-a-row-3.27.90-1.fc28.x86_64  under Wayland

(four-in-a-row:30230): Gdk-WARNING **: 14:53:19.366: gdkwindow-x11.c:5573 drawable is not a native X11 window

Whenever the game makes a sound.
Comment 1 Yanko Kaneti 2018-02-15 13:10:28 UTC
Created attachment 368372 [details] [review]
fix
Comment 2 Yanko Kaneti 2018-02-15 13:13:37 UTC
Comment on attachment 368372 [details] [review]
fix

Play sounds using the default libcanberra-gtk3 context
Comment 3 Michael Catanzaro 2018-02-15 18:34:32 UTC
Review of attachment 368372 [details] [review]:

:)
Comment 4 Yanko Kaneti 2018-02-15 23:07:23 UTC
Pushed to master as 3323c0a9bcb3dc84f4a21613a67a7bcdaa56753e