Play sounds using the default libcanberra-gtk3 context

https://bugzilla.gnome.org/show_bug.cgi?id=793485